# PyNovaGE

./: .gitignore  CMakeLists.txt  IMPLEMENTATION.md  LICENSE  PERFORMANCE_IMPROVEMENTS.md  RAN_ONLINE_CLONE_GDD.md  README.md  ROADMAP.md  final_test.py  physics_visual.py  simple_test.py  test_primitives.py  visual_test.py
core/math/: ALGORITHMS.md  CMakeLists.txt  NAMING_CONVENTIONS.md
core/math/include/: matrix2.hpp  matrix3.hpp  matrix4.hpp  primitives.hpp  quaternion.hpp  simd_utils.hpp  template_operations.hpp  vector2.hpp  vector3.hpp  vector4.hpp
core/math/include/geometry/: bezier.hpp  broad_phase.hpp  bsp_tree.hpp  bspline.hpp  catmull_rom.hpp  catmull_rom_path.hpp  collision_response.hpp  frustum_culling.hpp  hermite.hpp  high_speed_collision.hpp  intersection.hpp  octree.hpp  path.hpp  primitives.hpp  quadtree.hpp  spatial_hash.hpp  spatial_partitioning.hpp
core/math/include/lighting/: area_light.hpp  attenuation.hpp  directional_light.hpp  light_transforms.hpp  light_types.hpp  point_light.hpp  shadow_map.hpp  shadow_volume.hpp  spot_light.hpp  volumetric_light.hpp
core/math/include/math/: math_constants.hpp  matrix2.hpp  matrix3.hpp  simd_utils.hpp  vector2.hpp  vector3.hpp
core/math/src/: simd_utils.cpp
core/math/src/geometry/: bezier.cpp  broad_phase.cpp  bspline.cpp  catmull_rom.cpp  catmull_rom_path.cpp  collision_response.cpp  continuous_collision.cpp  hermite.cpp  high_speed_collision.cpp  morton_tables.hpp  path.cpp
core/math/src/lighting/: area_light.cpp  attenuation.cpp  directional_light.cpp  light_transforms.cpp  point_light.cpp  shadow_map.cpp  shadow_volume.cpp  spot_light.cpp  volumetric_light.cpp
core/math/tests/: matrix2_perf_tests.cpp  matrix2_tests.cpp  matrix3_perf_tests.cpp  matrix3_tests.cpp  matrix4_perf_tests.cpp  matrix4_tests.cpp  matrix_perf_tests.cpp  primitives_perf_tests.cpp  primitives_tests.cpp  quaternion_perf_tests.cpp  quaternion_tests.cpp  simd_utils_perf_tests.cpp  simd_utils_tests.cpp  simd_utils_vec3_tests.cpp  vector2_perf_tests.cpp  vector2_tests.cpp  vector3_perf_tests.cpp  vector3_tests.cpp  vector4_perf_tests.cpp  vector4_tests.cpp
core/math/tests/benchmarks/: matrix_real_world_benchmarks.cpp  quaternion_real_world_benchmarks.cpp  vector_real_world_benchmarks.cpp
core/math/tests/geometry/: bezier_perf_extended_tests.cpp  bezier_perf_tests.cpp  bezier_tests.cpp  broad_phase_perf_tests.cpp  broad_phase_tests.cpp  bspline_perf_extended_tests.cpp  bspline_perf_tests.cpp  bspline_tests.cpp  catmull_rom_perf_tests.cpp  catmull_rom_tests.cpp  collision_response_perf_tests.cpp  collision_response_tests.cpp  continuous_collision_perf_tests.cpp  continuous_collision_tests.cpp  frustum_culling_tests.cpp  hermite_perf_tests.cpp  hermite_tests.cpp  high_speed_collision_perf_tests.cpp  high_speed_collision_tests.cpp  intersection_perf_tests.cpp  intersection_tests.cpp  path_perf_tests.cpp  path_test.cpp  path_tests.cpp  primitives_tests.cpp  spatial_partitioning_benchmarks.cpp  spatial_partitioning_perf_tests.cpp  spatial_partitioning_tests.cpp
core/math/tests/lighting/: area_light_perf_tests.cpp  area_light_tests.cpp  attenuation_perf_tests.cpp  attenuation_tests.cpp  directional_light_perf_tests.cpp  directional_light_tests.cpp  light_transforms_perf_tests.cpp  (+11 more)
core/memory/: CMakeLists.txt
core/memory/include/: allocators.hpp  defrag_allocator.hpp  deque.hpp  iallocator.hpp  linear_allocator.hpp  memory_tracer.hpp  memory_tracking.hpp  memory_utils.hpp  pool_allocator.hpp  size_class_free_list.hpp  size_classes.hpp  stack_allocator.hpp  string.hpp  string_view.hpp  utf.hpp  vector.hpp
core/memory/src/: memory_tracer.cpp
core/memory/tests/: allocator_perf_tests.cpp  basic_ops_benchmarks.hpp  basic_ops_main.cpp  defrag_allocator_tests.cpp  deque_tests.cpp  memory_analysis_benchmarks.cpp  memory_tracer_tests.cpp  pool_allocator_perf_tests.cpp  sizeclass_benchmarks.hpp  sizeclass_main.cpp  stack_allocator_perf_tests.cpp  string_tests.cpp  string_view_tests.cpp  threading_benchmarks.hpp  threading_main.cpp  utf_tests.cpp  vector_tests.cpp
engine/: CMakeLists.txt
engine/core/: CMakeLists.txt
engine/core/camera/: CMakeLists.txt
engine/core/physics/: CMakeLists.txt
engine/core/renderer/: CMakeLists.txt
engine/core/scene/: CMakeLists.txt
engine/core/window/: CMakeLists.txt
engine/foundation/: CMakeLists.txt
engine/foundation/math/: CMakeLists.txt
engine/foundation/memory/: CMakeLists.txt
engine/foundation/threading/: CMakeLists.txt
engine/graphics/: CMakeLists.txt
engine/graphics/particles/: CMakeLists.txt
engine/systems/: CMakeLists.txt
engine/systems/asset/: CMakeLists.txt
engine/systems/audio/: CMakeLists.txt
examples/: CMakeLists.txt  framebuffer_example.cpp  main.cpp
examples/basic_window/: CMakeLists.txt  main.cpp
examples/common/: game.hpp
examples/framebuffer_example/: CMakeLists.txt
examples/interactive_demo/: CMakeLists.txt  main.cpp
examples/mmo_performance_demo/: CMakeLists.txt  main.cpp
examples/platformer/: CMakeLists.txt
examples/platformer/include/: game.hpp  platform.hpp  player.hpp
examples/platformer/src/: game.cpp  main.cpp  platform.cpp  player.cpp
examples/shader_test/: CMakeLists.txt  main.cpp
examples/sprite_test/: CMakeLists.txt  main.cpp
examples/texture_test/: CMakeLists.txt  main.cpp
examples/voxel_demo/: CMakeLists.txt  main.cpp
python_bindings/: CMakeLists.txt  README.md  setup.py
python_bindings/examples/: README.md  audio_test.py  basic_window.py  complete_api_summary.py  complete_particle_test.py  debug_fixes_test.py  drawing_test.py  enhanced_math_test.py  interactive_demo.py  physics_benchmark_simple.py  realistic_benchmark.py  screen_buffer_diagnostic.py  sprite_demo.py  system_integration_test.py  visual_balls_demo.py
python_bindings/pynovage/: __init__.py  color.py  pygame_like.py  rect.py  surface.py
python_bindings/src/: bind_asset.cpp  bind_audio.cpp  bind_input.cpp  bind_math.cpp  bind_particles.cpp  bind_physics.cpp  bind_renderer.cpp  bind_scene.cpp  bind_window.cpp  main.cpp
tests/: CMakeLists.txt
(+204 files in other folders)
